WebCore/inspector/ConsoleMessage.cpp
@@ -40,6 +40,34 @@
 
 namespace WebCore {
 
+ConsoleMessage::CallFrame::CallFrame(const ScriptCallFrame& frame)
+    : m_functionName(frame.functionName())
+    , m_sourceURL(frame.sourceURL())
+    , m_lineNumber(frame.lineNumber())
+{
+}
+
+ConsoleMessage::CallFrame::CallFrame()
+    : m_lineNumber(0)
+{
+}
+
+bool ConsoleMessage::CallFrame::isEqual(const ConsoleMessage::CallFrame& o) const
+{
+    return m_functionName == o.m_functionName
+        && m_sourceURL == o.m_sourceURL
+        && m_lineNumber == o.m_lineNumber;
+}
+
+ScriptObject ConsoleMessage::CallFrame::buildObject(InspectorFrontend* frontend) const
+{
+    ScriptObject frame = frontend->newScriptObject();
+    frame.set("functionName", m_functionName);
+    frame.set("sourceURL", m_sourceURL.string());
+    frame.set("lineNumber", m_lineNumber);
+    return frame;
+}
+
 ConsoleMessage::ConsoleMessage(MessageSource s, MessageType t, MessageLevel l, const String& m, unsigned li, const String& u, unsigned g)
     : m_source(s)
     , m_type(t)
@@ -73,7 +101,7 @@ ConsoleMessage::ConsoleMessage(MessageSource s, MessageType t, MessageLevel l, S
     // frames, refactor to use that, as well.
     if (storeTrace) {
         for (unsigned i = 0; i < callStack->size(); ++i)
-            m_frames[i] = callStack->at(i).functionName();
+            m_frames[i] = ConsoleMessage::CallFrame(callStack->at(i));
     }
 
 #if ENABLE(INSPECTOR)
@@ -107,10 +135,10 @@ void ConsoleMessage::addToFrontend(InspectorFrontend* frontend, InjectedScriptHo
         jsonObj.set("parameters", jsonArgs);
     }
     if (!m_frames.isEmpty()) {
-        ScriptArray jsonFrames = frontend->newScriptArray();
-        for (unsigned i = 0; i < m_frames.size(); ++i)
-            jsonFrames.set(i, m_frames[i]);
-        jsonObj.set("stackTrace", jsonFrames);
+        ScriptArray frames = frontend->newScriptArray();
+        for (unsigned i = 0; i < m_frames.size(); i++)
+            frames.set(i, m_frames.at(i).buildObject(frontend));
+        jsonObj.set("stackTrace", frames);
     }
     frontend->addConsoleMessage(jsonObj);
 }
@@ -144,7 +172,7 @@ bool ConsoleMessage::isEqual(ScriptState* state, ConsoleMessage* msg) const
         return false;
 
     for (size_t i = 0; i < frameCount; ++i) {
-        if (m_frames[i] != msg->m_frames[i])
+        if (!m_frames[i].isEqual(msg->m_frames[i]))
             return false;
     }
 
